--- a/mail-order.html
+++ b/mail-order.html
@@ -105,6 +105,14 @@
             .mail-footer-bottom-block:last-child {
                 padding-bottom: 42px!important;
             }
+            .mail-footer-top-icon {
+                height: auto!important;
+                max-height: 43px!important;
+                padding-bottom: 13px!important;
+            }
+            .mail-footer-top-pic {
+                margin-top: 0!important;
+            }
         }
     </style>
 </head>
@@ -146,7 +154,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td align="center" style="padding-bottom:8px;text-align: center;">
-                                                        <img width="74" height="55" border="0" src="images/ok-icon.svg" alt="" />
+                                                        <img style="margin-left: 22px;" width="74" height="55" border="0" src="images/ok-icon.svg" alt="" />
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -232,10 +240,10 @@
                                                             <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 500;font-size: 13px;line-height: 16px;color: #828282;">Код 140217</span>
                                                         </div>
                                                         <div class="mail-list-order-amount-block" style="display: inline-block;vertical-align: top;box-sizing:border-box;width: 14%;padding-right: 20px;white-space: nowrap;">
-                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 500;font-size: 14px;line-height: 17px;color: #000000;">× 12</span>
+                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 500;font-size: 14px;line-height: 22px;color: #000000;">× 12</span>
                                                         </div>
                                                         <div class="mail-list-order-price-block" style="display: inline-block;vertical-align: top;box-sizing:border-box;width: 18%;white-space: nowrap;text-align: right;">
-                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 14px;line-height: 17px;color: #000000;">1 092 &#8381;</span>
+                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 14px;line-height: 22px;color: #000000;">1 092 &#8381;</span>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -249,10 +257,10 @@
                                                             <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 500;font-size: 13px;line-height: 16px;color: #828282;">Код 140217</span>
                                                         </div>
                                                         <div class="mail-list-order-amount-block" style="display: inline-block;vertical-align: top;box-sizing:border-box;width: 14%;padding-right: 20px;white-space: nowrap;">
-                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 500;font-size: 14px;line-height: 17px;color: #000000;">× 12</span>
+                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 500;font-size: 14px;line-height: 22px;color: #000000;">× 12</span>
                                                         </div>
                                                         <div class="mail-list-order-price-block" style="display: inline-block;vertical-align: top;box-sizing:border-box;width: 18%;white-space: nowrap;text-align: right;">
-                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 14px;line-height: 17px;color: #000000;">1 092 &#8381;</span>
+                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 14px;line-height: 22px;color: #000000;">1 092 &#8381;</span>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -266,10 +274,10 @@
                                                             <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 500;font-size: 13px;line-height: 16px;color: #828282;">Код 140217</span>
                                                         </div>
                                                         <div class="mail-list-order-amount-block" style="display: inline-block;vertical-align: top;box-sizing:border-box;width: 14%;padding-right: 20px;white-space: nowrap;">
-                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 500;font-size: 14px;line-height: 17px;color: #000000;">× 12</span>
+                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 500;font-size: 14px;line-height: 22px;color: #000000;">× 12</span>
                                                         </div>
                                                         <div class="mail-list-order-price-block" style="display: inline-block;vertical-align: top;box-sizing:border-box;width: 18%;white-space: nowrap;text-align: right;">
-                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 14px;line-height: 17px;color: #000000;">1 092 &#8381;</span>
+                                                            <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 14px;line-height: 22px;color: #000000;">1 092 &#8381;</span>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -322,15 +330,15 @@
                                                 <tr>
                                                     <td style="font-size: 0;" bgcolor="#31B085" align="center">
                                                         <div class="mail-footer-top-block" style="display: inline-block;vertical-align:top;box-sizing:border-box;width:50%;padding: 19px 20px 22px;border-right: 1px solid #FFFFFF;">
-                                                            <div style="text-align: center;padding-bottom: 16px;"><img border="0" width="43" height="43" src="images/back-icon.svg" alt="" /></div>
+                                                            <div class="mail-footer-top-icon" style="height:43px;text-align: center;padding-bottom: 16px;"><img class="mail-footer-top-pic" border="0" width="43" height="43" src="images/back-icon.svg" alt="" /></div>
                                                             <div class="mail-footer-top-info" style="text-align: center;max-width: 217px;margin-left: auto;margin-right: auto;">
                                                                 <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 13px;line-height: 20px;text-align: center;color: #FFFFFF;">Остались излишки или не подходит товар? Верните его нам в течение 360 дней!</span>
                                                             </div>
                                                         </div>
                                                         <div class="mail-footer-top-block" style="display: inline-block;vertical-align:top;box-sizing:border-box;width:50%;padding: 19px 20px 22px;">
-                                                            <div style="text-align: center;padding-bottom: 16px;"><img border="0" width="33" height="33" src="images/smile-icon.svg" alt="" /></div>
+                                                            <div class="mail-footer-top-icon" style="height:43px;text-align: center;padding-bottom: 16px;"><img class="mail-footer-top-pic" style="margin-top: 5px;" border="0" width="33" height="33" src="images/smile-icon.svg" alt="" /></div>
                                                             <div class="mail-footer-top-info" style="text-align: center;max-width: 217px;margin-left: auto;margin-right: auto;">
-                                                                <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 13px;line-height: 20px;text-align: center;color: #FFFFFF;">Остались излишки или не подходит товар? Верните его нам в течение 360 дней!</span>
+                                                                <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 13px;line-height: 20px;text-align: center;color: #FFFFFF;">Будем благодарны, если вы оставите отзыв о нашем магазине</span>
                                                             </div>
                                                         </div>
                                                     </td>
