--- a/mail-order.html
+++ b/mail-order.html
@@ -154,7 +154,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td align="center" style="padding-bottom:8px;text-align: center;">
-                                                        <img style="margin-left: 22px;" width="74" height="55" border="0" src="images/ok-icon.svg" alt="" />
+                                                        <div style="display: inline-block;"><img style="margin-left: 22px;" width="74" height="55" border="0" src="images/ok-icon.svg" alt="" /></div>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -330,13 +330,13 @@
                                                 <tr>
                                                     <td style="font-size: 0;" bgcolor="#31B085" align="center">
                                                         <div class="mail-footer-top-block" style="display: inline-block;vertical-align:top;box-sizing:border-box;width:50%;padding: 19px 20px 22px;border-right: 1px solid #FFFFFF;">
-                                                            <div class="mail-footer-top-icon" style="height:43px;text-align: center;padding-bottom: 16px;"><img class="mail-footer-top-pic" border="0" width="43" height="43" src="images/back-icon.svg" alt="" /></div>
+                                                            <div class="mail-footer-top-icon" style="height:43px;text-align: center;padding-bottom: 16px;"><img class="mail-footer-top-pic" style="display: inline-block;" border="0" width="43" height="43" src="images/back-icon.svg" alt="" /></div>
                                                             <div class="mail-footer-top-info" style="text-align: center;max-width: 217px;margin-left: auto;margin-right: auto;">
                                                                 <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 13px;line-height: 20px;text-align: center;color: #FFFFFF;">Остались излишки или не подходит товар? Верните его нам в течение 360 дней!</span>
                                                             </div>
                                                         </div>
                                                         <div class="mail-footer-top-block" style="display: inline-block;vertical-align:top;box-sizing:border-box;width:50%;padding: 19px 20px 22px;">
-                                                            <div class="mail-footer-top-icon" style="height:43px;text-align: center;padding-bottom: 16px;"><img class="mail-footer-top-pic" style="margin-top: 5px;" border="0" width="33" height="33" src="images/smile-icon.svg" alt="" /></div>
+                                                            <div class="mail-footer-top-icon" style="height:43px;text-align: center;padding-bottom: 16px;"><img class="mail-footer-top-pic" style="display: inline-block;margin-top: 5px;" border="0" width="33" height="33" src="images/smile-icon.svg" alt="" /></div>
                                                             <div class="mail-footer-top-info" style="text-align: center;max-width: 217px;margin-left: auto;margin-right: auto;">
                                                                 <span style="font-family: Arial, Tahoma, sans-serif;font-weight: 600;font-size: 13px;line-height: 20px;text-align: center;color: #FFFFFF;">Будем благодарны, если вы оставите отзыв о нашем магазине</span>
                                                             </div>
